Fixed skills area overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: auto
 }
 
 .skillsIconContainer {
